table overflow fix attempt 7

--- a/themes/whodathunk-theme/assets/css/main.css
+++ b/themes/whodathunk-theme/assets/css/main.css
@@ -23,8 +23,6 @@ table {
     border-collapse: collapse;
     border-top: 1px solid #999999;
     border-bottom: 1px solid #999999;
-    display: block;
-    overflow: auto;
 }
 th,
 td {
